instagram and strava updates from 2017-12-31

--- a/index.html
+++ b/index.html
@@ -173,6 +173,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001143.jpg" title="Not the way I wanted to end my race...but this stuff is frickin dangerous at 15 below. Safe off the trail, about 45 miles of brutal riding done. Currently drinking shots and trying to warm up. #fatbike #winterultra #tuscobia80" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Not the way I wanted to end my race...but this stuff is frickin dangerous at 15 below. Safe off the trail, about 45 miles of brutal riding done. Currently drinking shots and trying to warm up. #fatbike #winterultra #tuscobia80</small>
+                           </div>
+                           <img src="../lsphotos/image001143.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001144.jpg" title="Sunset on the trail. 6 hours ride time on the trail so far. Average temps sitting around -15 (low of -33 with wind chill) 6+ hours or so left to go. #tuscobia80" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset on the trail. 6 hours ride time on the trail so far. Average temps sitting around -15 (low of -33 with wind chill) 6+ hours or so left to go. #tuscobia80</small>
+                           </div>
+                           <img src="../lsphotos/image001144.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001145.jpg" title="Go @lovestarfactoryteam!!!!! #cycling #cycloscross #fatbikeracing #cyclinginthemidwest #fatbike #lovestarfactoryteam #tuscobia80 #elliotlovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Go @lovestarfactoryteam!!!!! #cycling #cycloscross #fatbikeracing #cyclinginthemidwest #fatbike #lovestarfactoryteam #tuscobia80 #elliotlovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image001145.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001146.jpg" title="@elliotlovestarbicycles racing team is riding the Tuscobia80 race today! Praying for safety in harsh conditions, endurance, and stamina, for these three dedicated racers who have trained a year for this race!! Currently it is -20 degrees up there, and they have 80 miles to conquer with full packs and gear! #elliotlovestarbicycles #lovestarraceclub #fatbikeracing #cyclingyearround #cyclocross #cyclocrossinthemidwest #elliotlovestar #lovestarbicyclebags #enduranceracing #godgowithyou" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>@elliotlovestarbicycles racing team is riding the Tuscobia80 race today! Praying for safety in harsh conditions, endurance, and stamina, for these three dedicated racers who have trained a year for this race!! Currently it is -20 degrees up there, and they have 80 miles to conquer with full packs and gear! #elliotlovestarbicycles #lovestarraceclub #fatbikeracing #cyclingyearround #cyclocross #cyclocrossinthemidwest #elliotlovestar #lovestarbicyclebags #enduranceracing #godgowithyou</small>
+                           </div>
+                           <img src="../lsphotos/image001146.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001142.jpg" title="Loving my new stem cap on the borealis! #worldbicyclerelief is great organization helping people around the world. #sram #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -374,66 +426,6 @@
                               <small>So incredibly proud of this little grandson of mine...not quite three years old and riding his two wheel bike with hand brakes like the little champ he is!!! #adorable #aboyandhisbike #thiskidlovestoride #preciousgrandson #cycling #bikelife #ridinginthemidwest #ridingyearround #custompogies #elliotlovestarbicycles #elliotlovestar #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image001127.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001126.jpg" title="I know I post a lot of pictures of my little guy...but I am always surprised and proud that no matter the weather...he is excited and all smiles about riding his bike. #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I know I post a lot of pictures of my little guy...but I am always surprised and proud that no matter the weather...he is excited and all smiles about riding his bike. #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image001126.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001125.jpg" title="Sunrise DPRT 🚲🚲🚲❄️❄️❄️ #fatbike #tuscobia80" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise DPRT 🚲🚲🚲❄️❄️❄️ #fatbike #tuscobia80</small>
-                           </div>
-                           <img src="../lsphotos/image001125.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001124.jpg" title="#tuscobia80 training with @mrchanzalez this morning. #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#tuscobia80 training with @mrchanzalez this morning. #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image001124.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001122.jpg" title="How awesome is this kid?? ❤️ Repost from @elliotlovesbicycles: Super commuter. #bikewinter
-•
-•
-•
-#clearybikes #clearygecko #adventurebike #getoutsideandride #activekids #raiseriders #kidsonbikes #bikecommute #lovestarbicyclebags #pogies #getoutside #kidswhobike #clearykid #clearydeepblue #morekidsonbikes #outfamcommunity #outdoorkids #getoutandride #enjoytheride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>clearybikes</h4>
-                              <small>How awesome is this kid?? ❤️ Repost from @elliotlovesbicycles: Super commuter. #bikewinter
-•
-•
-•
-#clearybikes #clearygecko #adventurebike #getoutsideandride #activekids #raiseriders #kidsonbikes #bikecommute #lovestarbicyclebags #pogies #getoutside #kidswhobike #clearykid #clearydeepblue #morekidsonbikes #outfamcommunity #outdoorkids #getoutandride #enjoytheride</small>
-                           </div>
-                           <img src="../lsphotos/image001122.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
