--- a/instagram1.html
+++ b/instagram1.html
@@ -6,6 +6,66 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001126.jpg" title="I know I post a lot of pictures of my little guy...but I am always surprised and proud that no matter the weather...he is excited and all smiles about riding his bike. #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>I know I post a lot of pictures of my little guy...but I am always surprised and proud that no matter the weather...he is excited and all smiles about riding his bike. #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image001126.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001125.jpg" title="Sunrise DPRT 🚲🚲🚲❄️❄️❄️ #fatbike #tuscobia80" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise DPRT 🚲🚲🚲❄️❄️❄️ #fatbike #tuscobia80</small>
+                           </div>
+                           <img src="../lsphotos/image001125.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001124.jpg" title="#tuscobia80 training with @mrchanzalez this morning. #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#tuscobia80 training with @mrchanzalez this morning. #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001124.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001122.jpg" title="How awesome is this kid?? ❤️ Repost from @elliotlovesbicycles: Super commuter. #bikewinter
+•
+•
+•
+#clearybikes #clearygecko #adventurebike #getoutsideandride #activekids #raiseriders #kidsonbikes #bikecommute #lovestarbicyclebags #pogies #getoutside #kidswhobike #clearykid #clearydeepblue #morekidsonbikes #outfamcommunity #outdoorkids #getoutandride #enjoytheride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clearybikes</h4>
+                              <small>How awesome is this kid?? ❤️ Repost from @elliotlovesbicycles: Super commuter. #bikewinter
+•
+•
+•
+#clearybikes #clearygecko #adventurebike #getoutsideandride #activekids #raiseriders #kidsonbikes #bikecommute #lovestarbicyclebags #pogies #getoutside #kidswhobike #clearykid #clearydeepblue #morekidsonbikes #outfamcommunity #outdoorkids #getoutandride #enjoytheride</small>
+                           </div>
+                           <img src="../lsphotos/image001122.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001121.jpg" title="Super commuter. #bikewinter" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,66 +267,6 @@
                               <small>I am so thankful for my crew. #LovestarRaceClub #LovestarBanquet</small>
                            </div>
                            <img src="../lsphotos/image001107.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001106.jpg" title="Frosty Sunrise. #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Frosty Sunrise. #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image001106.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001105.jpg" title="After school commute. #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>After school commute. #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image001105.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001104.jpg" title="Great vibes this morning as I finished my ride! #lovestarraceclub #cycling #sunrise #nofilter" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Great vibes this morning as I finished my ride! #lovestarraceclub #cycling #sunrise #nofilter</small>
-                           </div>
-                           <img src="../lsphotos/image001104.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001102.jpg" title="Homemade ramp built by dad ✅. Dirt bike helmet ✅. Pogies to keep your hands warm ✅. Cleary Gecko Bike ✅. Time outside with dad ✅. What more do you need for an awesome time outside?? 🍁🍂😊 📷| @elliotlovestarbicycles .
-.
-.
-.
-#awesomedad #bikeramp #getoutsideandplay #bikefun #getoutandplay #getmoving #outdoorkids #outsideisfree #optoutside #kidswhoride #clearybikes #clearygecko #lovestarbicyclebags #pogies #morekidsonbikes #adventurekids #rideyourbike #kidsonbikes #clearyblue #clearykid #raiseriders #enjoytheride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>clearybikes</h4>
-                              <small>Homemade ramp built by dad ✅. Dirt bike helmet ✅. Pogies to keep your hands warm ✅. Cleary Gecko Bike ✅. Time outside with dad ✅. What more do you need for an awesome time outside?? 🍁🍂😊 📷| @elliotlovestarbicycles .
-.
-.
-.
-#awesomedad #bikeramp #getoutsideandplay #bikefun #getoutandplay #getmoving #outdoorkids #outsideisfree #optoutside #kidswhoride #clearybikes #clearygecko #lovestarbicyclebags #pogies #morekidsonbikes #adventurekids #rideyourbike #kidsonbikes #clearyblue #clearykid #raiseriders #enjoytheride</small>
-                           </div>
-                           <img src="../lsphotos/image001102.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
