--- a/instagram2.html
+++ b/instagram2.html
@@ -6,6 +6,66 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001106.jpg" title="Frosty Sunrise. #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Frosty Sunrise. #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001106.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001105.jpg" title="After school commute. #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>After school commute. #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image001105.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001104.jpg" title="Great vibes this morning as I finished my ride! #lovestarraceclub #cycling #sunrise #nofilter" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Great vibes this morning as I finished my ride! #lovestarraceclub #cycling #sunrise #nofilter</small>
+                           </div>
+                           <img src="../lsphotos/image001104.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001102.jpg" title="Homemade ramp built by dad ✅. Dirt bike helmet ✅. Pogies to keep your hands warm ✅. Cleary Gecko Bike ✅. Time outside with dad ✅. What more do you need for an awesome time outside?? 🍁🍂😊 📷| @elliotlovestarbicycles .
+.
+.
+.
+#awesomedad #bikeramp #getoutsideandplay #bikefun #getoutandplay #getmoving #outdoorkids #outsideisfree #optoutside #kidswhoride #clearybikes #clearygecko #lovestarbicyclebags #pogies #morekidsonbikes #adventurekids #rideyourbike #kidsonbikes #clearyblue #clearykid #raiseriders #enjoytheride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clearybikes</h4>
+                              <small>Homemade ramp built by dad ✅. Dirt bike helmet ✅. Pogies to keep your hands warm ✅. Cleary Gecko Bike ✅. Time outside with dad ✅. What more do you need for an awesome time outside?? 🍁🍂😊 📷| @elliotlovestarbicycles .
+.
+.
+.
+#awesomedad #bikeramp #getoutsideandplay #bikefun #getoutandplay #getmoving #outdoorkids #outsideisfree #optoutside #kidswhoride #clearybikes #clearygecko #lovestarbicyclebags #pogies #morekidsonbikes #adventurekids #rideyourbike #kidsonbikes #clearyblue #clearykid #raiseriders #enjoytheride</small>
+                           </div>
+                           <img src="../lsphotos/image001102.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001101.jpg" title="🍁🚲 #lilshredder" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +267,6 @@
                               <small>4 years ago today...how fast it goes! #tbt #elliotlovestarbicycles #elliotlovestar #lovestarbicyclebags #soproudofmyson</small>
                            </div>
                            <img src="../lsphotos/image001087.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001086.jpg" title="🍁 🚲 🌊" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>🍁 🚲 🌊</small>
-                           </div>
-                           <img src="../lsphotos/image001086.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001085.jpg" title="Night ride shenanigans with @jobywankenoby" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Night ride shenanigans with @jobywankenoby</small>
-                           </div>
-                           <img src="../lsphotos/image001085.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001082.jpg" title="Some more detail on my personal #Tuscobia80 bikepacking setup.  #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some more detail on my personal #Tuscobia80 bikepacking setup.  #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image001082.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001083.jpg" title="Cold dawn rides always feel adventure-y #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold dawn rides always feel adventure-y #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image001083.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
