--- a/instagram3.html
+++ b/instagram3.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001086.jpg" title="🍁 🚲 🌊" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>🍁 🚲 🌊</small>
+                           </div>
+                           <img src="../lsphotos/image001086.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001085.jpg" title="Night ride shenanigans with @jobywankenoby" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Night ride shenanigans with @jobywankenoby</small>
+                           </div>
+                           <img src="../lsphotos/image001085.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001082.jpg" title="Some more detail on my personal #Tuscobia80 bikepacking setup.  #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some more detail on my personal #Tuscobia80 bikepacking setup.  #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image001082.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001083.jpg" title="Cold dawn rides always feel adventure-y #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold dawn rides always feel adventure-y #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001083.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001084.jpg" title="Snow Camo & Lime Green ❄️🚲 #fatbike" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Handlebar Handlebar ##lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image001068.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001069.jpg" title="Snuck in a quick shred this afternoon while the kids napped. #mtb" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Snuck in a quick shred this afternoon while the kids napped. #mtb</small>
-                           </div>
-                           <img src="../lsphotos/image001069.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001065.jpg" title="@jobywankenoby chasing 🦌 off the trails this morning. #palos" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@jobywankenoby chasing 🦌 off the trails this morning. #palos</small>
-                           </div>
-                           <img src="../lsphotos/image001065.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001063.jpg" title="Her Birthday isn’t until November, but I couldn’t wait to put #babySNUB ‘s new 20”+ Cujo together. Now I have to hide it in the garage until her birthday 😬 #babyfat #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Her Birthday isn’t until November, but I couldn’t wait to put #babySNUB ‘s new 20”+ Cujo together. Now I have to hide it in the garage until her birthday 😬 #babyfat #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image001063.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001064.jpg" title="Sunrise Palos with @jobywankenoby . #mountainbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise Palos with @jobywankenoby . #mountainbike</small>
-                           </div>
-                           <img src="../lsphotos/image001064.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
