--- a/instagram18.html
+++ b/instagram18.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000786.jpg" title="18 below. Riding across a frozen lagoon at sunrise...adrenaline is a great way to warm up when you're cold 😳❄️🚲⛸#fatbike #bicycle #cycling #icebike #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>18 below. Riding across a frozen lagoon at sunrise...adrenaline is a great way to warm up when you're cold 😳❄️🚲⛸#fatbike #bicycle #cycling #icebike #bikechi #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000786.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000785.jpg" title="Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000785.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000783.jpg" title="Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000783.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000781.jpg" title="We're having a picnic. #winterbike #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>We're having a picnic. #winterbike #fatbike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000781.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000777.jpg" title="It's amazing how fat biking in the snow with good friends makes you feel like a little kid again #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -207,58 +259,6 @@
                               <small>@casa.de.cross powering through some crazy sloppy cross conditions. #cycling #bicycle #cyclocross #cx #montrosecx #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000765.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000766.jpg" title="@ddave12000 crushing at a very snowy and wet state championship race. #montrosecx #bicycle #cycling #cyclocross #cx #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@ddave12000 crushing at a very snowy and wet state championship race. #montrosecx #bicycle #cycling #cyclocross #cx #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000766.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000763.jpg" title="I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies</small>
-                           </div>
-                           <img src="../lsphotos/image000763.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000762.jpg" title="#lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>kristinangraham</h4>
-                              <small>#lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000762.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000761.jpg" title="Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000761.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
