--- a/instagram19.html
+++ b/instagram19.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000766.jpg" title="@ddave12000 crushing at a very snowy and wet state championship race. #montrosecx #bicycle #cycling #cyclocross #cx #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@ddave12000 crushing at a very snowy and wet state championship race. #montrosecx #bicycle #cycling #cyclocross #cx #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000766.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000763.jpg" title="I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>I have some truly amazing teammates. #LovestarRaceClub #cycling #bicycle #teamcookies</small>
+                           </div>
+                           <img src="../lsphotos/image000763.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000762.jpg" title="#lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>kristinangraham</h4>
+                              <small>#lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000762.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000761.jpg" title="Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Morning suffer session. #cycling #bicycle #rollers #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000761.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000760.jpg" title="Evening rides - bright glasses. #cycling #bicycle #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Important ride this morning. #vote #cycling #bicycle #fatbike #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000081.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000017.jpg" title="It's been a rough couple weeks for my cycling. Off the bike a lot with illness, sick kids, cold-wet & dark weather...this morning I got up early for a garage roller session to start getting my legs back under me. Felt really good in a horrifying painful kind of way. #cycling #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It's been a rough couple weeks for my cycling. Off the bike a lot with illness, sick kids, cold-wet & dark weather...this morning I got up early for a garage roller session to start getting my legs back under me. Felt really good in a horrifying painful kind of way. #cycling #bicycle #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000017.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000088.jpg" title="Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000088.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000019.jpg" title="Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000019.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun</small>
-                           </div>
-                           <img src="../lsphotos/image000541.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
