--- a/instagram20.html
+++ b/instagram20.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000017.jpg" title="It's been a rough couple weeks for my cycling. Off the bike a lot with illness, sick kids, cold-wet & dark weather...this morning I got up early for a garage roller session to start getting my legs back under me. Felt really good in a horrifying painful kind of way. #cycling #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>It's been a rough couple weeks for my cycling. Off the bike a lot with illness, sick kids, cold-wet & dark weather...this morning I got up early for a garage roller session to start getting my legs back under me. Felt really good in a horrifying painful kind of way. #cycling #bicycle #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000017.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000088.jpg" title="Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000088.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000019.jpg" title="Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000019.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun</small>
+                           </div>
+                           <img src="../lsphotos/image000541.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000089.jpg" title="Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -207,58 +259,6 @@
                               <small>Cold morning & New kit day! #cycling #bicycle #capsnothats #champsys #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000030.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000031.jpg" title="Cold fall ride calls for coffee inside. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Cold fall ride calls for coffee inside. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000031.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000032.jpg" title="New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000032.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000033.jpg" title="New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek</small>
-                           </div>
-                           <img src="../lsphotos/image000033.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000034.jpg" title="Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx</small>
-                           </div>
-                           <img src="../lsphotos/image000034.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
