--- a/instagram21.html
+++ b/instagram21.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000031.jpg" title="Cold fall ride calls for coffee inside. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Cold fall ride calls for coffee inside. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000031.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000032.jpg" title="New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000032.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000033.jpg" title="New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek</small>
+                           </div>
+                           <img src="../lsphotos/image000033.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000034.jpg" title="Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx</small>
+                           </div>
+                           <img src="../lsphotos/image000034.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000035.jpg" title="Gritty & grey this morning for today's ride. Definitely feeling like cyclocross weather. #cycling #bicycle #cyclocross #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>A very wet #rulenumber5 kind of ride today. Breaking in my new bike in just about the most Belgian way possible. #LovestarRaceClub #ridecannondale #bikechi #cycling #bicycle #toolsnotjewels</small>
                            </div>
                            <img src="../lsphotos/image000046.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000047.jpg" title="Sometimes getting dropped means you have time to stop and take a picture... #cycling #bikechi #lakemichigan #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sometimes getting dropped means you have time to stop and take a picture... #cycling #bikechi #lakemichigan #ridecannondale #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000047.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000048.jpg" title="#cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#cycling #bicycle #ridecannondale #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000048.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000049.jpg" title="@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000049.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000050.jpg" title="Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000050.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
