--- a/instagram35.html
+++ b/instagram35.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000644.jpg" title="Kudos to teammate @ddave12000 for nabbing 15th in the 4s and 6th in the 4/5s today!! #montrosecx #Cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Kudos to teammate @ddave12000 for nabbing 15th in the 4s and 6th in the 4/5s today!! #montrosecx #Cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000644.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000645.jpg" title="Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx</small>
+                           </div>
+                           <img src="../lsphotos/image000645.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000646.jpg" title="Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image000646.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000647.jpg" title="Big shout out to these to guys! @elliotlovestarbicycles and @casadewaggoner. Had such a blast racing CX with you guys this year!! Thanks for all the tips, encouragement, etc!  #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Big shout out to these to guys! @elliotlovestarbicycles and @casadewaggoner. Had such a blast racing CX with you guys this year!! Thanks for all the tips, encouragement, etc!  #lovestarfactoryteam #lsb</small>
+                           </div>
+                           <img src="../lsphotos/image000647.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000648.jpg" title="Last Cross race of 2015 and it was a great one (two?)! Got upgraded to Cat4 so I did that for the first time and then did Cat4/5 after. Got 15th and 6th respectively. #savingmybestforlast #lsb #lovestarfactoryteam #montrosecx #alreadylookingforwardtonextyear" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -207,58 +259,6 @@
                               <small>Fat biking in the snow is Seriously blowing my mind as I re-discover all my local trails... #fatbike #lovestarfactoryteam #bikepackingbags #bikepacking #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000652.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000229.jpg" title="Re-post from @elliotlovestarbicycles What a determined little cutie...won't be long now! #elliotlovestarbicycle #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Re-post from @elliotlovestarbicycles What a determined little cutie...won't be long now! #elliotlovestarbicycle #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000229.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000230.jpg" title="Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000230.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000534.jpg" title="#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000534.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000653.jpg" title="Droppin into the sand. #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Droppin into the sand. #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000653.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
