--- a/instagram4.html
+++ b/instagram4.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001069.jpg" title="Snuck in a quick shred this afternoon while the kids napped. #mtb" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Snuck in a quick shred this afternoon while the kids napped. #mtb</small>
+                           </div>
+                           <img src="../lsphotos/image001069.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001065.jpg" title="@jobywankenoby chasing 🦌 off the trails this morning. #palos" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@jobywankenoby chasing 🦌 off the trails this morning. #palos</small>
+                           </div>
+                           <img src="../lsphotos/image001065.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001063.jpg" title="Her Birthday isn’t until November, but I couldn’t wait to put #babySNUB ‘s new 20”+ Cujo together. Now I have to hide it in the garage until her birthday 😬 #babyfat #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Her Birthday isn’t until November, but I couldn’t wait to put #babySNUB ‘s new 20”+ Cujo together. Now I have to hide it in the garage until her birthday 😬 #babyfat #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001063.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001064.jpg" title="Sunrise Palos with @jobywankenoby . #mountainbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise Palos with @jobywankenoby . #mountainbike</small>
+                           </div>
+                           <img src="../lsphotos/image001064.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001062.jpg" title="Part of my #Tuscobia80 prep for this year includes making bikepacking bag setups for my two teammates (and myself.) The design work is pretty much done, and fabrication is starting to ramp up. Sneak peak at two very slick builds that are gonna be hitting the trails this December. #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Fall Fatty. #fatbike #ponyshop</small>
                            </div>
                            <img src="../lsphotos/image001047.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001046.jpg" title="Men's 35+ 4/5 race at Trek CX Cup. Good start to the weekend! Course is fast and fun!! #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Men's 35+ 4/5 race at Trek CX Cup. Good start to the weekend! Course is fast and fun!! #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image001046.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001044.jpg" title="Laughter, bikes and Pony Shop shirts to start the day. A big thank you to @ponylou for the mini-sized shop-wear! #siblings" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Laughter, bikes and Pony Shop shirts to start the day. A big thank you to @ponylou for the mini-sized shop-wear! #siblings</small>
-                           </div>
-                           <img src="../lsphotos/image001044.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001045.jpg" title="Sunrise at the end of the ride. #winteriscoming" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise at the end of the ride. #winteriscoming</small>
-                           </div>
-                           <img src="../lsphotos/image001045.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001043.jpg" title="Dusted & dialed-in on my cross setup. #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Dusted & dialed-in on my cross setup. #moots</small>
-                           </div>
-                           <img src="../lsphotos/image001043.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
