--- a/instagram41.html
+++ b/instagram41.html
@@ -6,6 +6,62 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000707.jpg" title="Sunrise ride. #lovestarfactoryteam #moots #psychloX #bikechi #cycling #cyclist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride. #lovestarfactoryteam #moots #psychloX #bikechi #cycling #cyclist</small>
+                           </div>
+                           <img src="../lsphotos/image000707.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000708.jpg" title="#babysnub pushing limits. Big thanks to @jwild_photography for capturing this perfect moment...I don't think I'll ever post a better picture on the internets. (She rocked this hill without incident btw) #babyGnar #futurecyclist #lovestarfactoryteam #striderbikes" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub pushing limits. Big thanks to @jwild_photography for capturing this perfect moment...I don't think I'll ever post a better picture on the internets. (She rocked this hill without incident btw) #babyGnar #futurecyclist #lovestarfactoryteam #striderbikes</small>
+                           </div>
+                           <img src="../lsphotos/image000708.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000784.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000784.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000272.jpg" title="Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000272.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000709.jpg" title="Today was a rather sobering reminder that #cyclocross is really coming... #cx #moots #psychloX #cycling #bikechi #lovestarfactoryteam #HACCXE" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,62 +263,6 @@
                               <small>#flashbackFriday to the Lovestar Factory Team crushing gravel and having a blast at the Almanzo 100. #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclist #gravel #gravelgrinder</small>
                            </div>
                            <img src="../lsphotos/image000279.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000280.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000280.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000281.jpg" title="Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000281.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000282.jpg" title="Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image000282.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000283.jpg" title="Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000283.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
