--- a/instagram48.html
+++ b/instagram48.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000361.jpg" title="Finished up a very slick Black & Purple Saddle Pack for a customer. #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #bikebag #saddlebag #seatbag #bikechi #cordura #custom #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a very slick Black & Purple Saddle Pack for a customer. #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #bikebag #saddlebag #seatbag #bikechi #cordura #custom #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000361.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000362.jpg" title="Received a re-supply order of Lovestar badges just in time to start a fun customer project! #lovestarbicyclebags #handmade #bikepacking #bikebag #MUSA #Cycling #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Received a re-supply order of Lovestar badges just in time to start a fun customer project! #lovestarbicyclebags #handmade #bikepacking #bikebag #MUSA #Cycling #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000362.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000363.jpg" title="Snow biking! #lovestarbicyclebags #babysnub #striderbikes #futurecyclist #bikechi #chiberia #evanston #cycling #pushbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Snow biking! #lovestarbicyclebags #babysnub #striderbikes #futurecyclist #bikechi #chiberia #evanston #cycling #pushbike</small>
+                           </div>
+                           <img src="../lsphotos/image000363.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000364.jpg" title="Lovestar Factory Team's youngest member is super excited about her team Jersey. She's using the hallways for winter training. #lovestarbicyclebags #strider #championsystems #cycling #bikechi #dadlife #futurecyclist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team's youngest member is super excited about her team Jersey. She's using the hallways for winter training. #lovestarbicyclebags #strider #championsystems #cycling #bikechi #dadlife #futurecyclist</small>
+                           </div>
+                           <img src="../lsphotos/image000364.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000365.jpg" title="Lovestar Factory Team's first junior racer looks forward to crushing local push bike races in the 2-3 year old division. #lovestarbicyclebags #futurecyclist #championsystems #dadlife #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>The Lovestar Shop Apron features a sewn-in magnetic disc to hold those small bits while you work. #nextlevel #SewRad #lovestarbicyclebags #handmade #cycling #Bicycle</small>
                            </div>
                            <img src="../lsphotos/image000380.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000381.jpg" title="The Lovestar Shop Apron is now up on my ETSY page! More photos are available on Facebook (Lovestar Bicycle Bags) hoping to get some higher quality pics ASAP. #handmade #lovestarbicyclebags #cycling #tools #shopapron #Bicycle #mechanic #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The Lovestar Shop Apron is now up on my ETSY page! More photos are available on Facebook (Lovestar Bicycle Bags) hoping to get some higher quality pics ASAP. #handmade #lovestarbicyclebags #cycling #tools #shopapron #Bicycle #mechanic #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000381.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000382.jpg" title="A very bicycle Christmas. Pro tools for next years #cyclocross season! #cx #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A very bicycle Christmas. Pro tools for next years #cyclocross season! #cx #bicycle #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000382.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000383.jpg" title="Go my first #Festive500 kilometers in today. Merry Christmas Eve!! #rapha #moots #gingerbreadcyclist #christmasride #cycling #cyclocross #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Go my first #Festive500 kilometers in today. Merry Christmas Eve!! #rapha #moots #gingerbreadcyclist #christmasride #cycling #cyclocross #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000383.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000384.jpg" title="My bike in adventure mode post #cyclocross season. Did just over 50 miles today. 34 degrees with freezing rain and some snow. Was able to hit the #DPRT the #GreenBayTrail an the #McClory path all in the same ride. #lovestarbicyclebags #cycling #gravelgrinder #moots #adventureisOutThere #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>My bike in adventure mode post #cyclocross season. Did just over 50 miles today. 34 degrees with freezing rain and some snow. Was able to hit the #DPRT the #GreenBayTrail an the #McClory path all in the same ride. #lovestarbicyclebags #cycling #gravelgrinder #moots #adventureisOutThere #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000384.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
