--- a/instagram5.html
+++ b/instagram5.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001046.jpg" title="Men's 35+ 4/5 race at Trek CX Cup. Good start to the weekend! Course is fast and fun!! #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Men's 35+ 4/5 race at Trek CX Cup. Good start to the weekend! Course is fast and fun!! #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image001046.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001044.jpg" title="Laughter, bikes and Pony Shop shirts to start the day. A big thank you to @ponylou for the mini-sized shop-wear! #siblings" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Laughter, bikes and Pony Shop shirts to start the day. A big thank you to @ponylou for the mini-sized shop-wear! #siblings</small>
+                           </div>
+                           <img src="../lsphotos/image001044.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001045.jpg" title="Sunrise at the end of the ride. #winteriscoming" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise at the end of the ride. #winteriscoming</small>
+                           </div>
+                           <img src="../lsphotos/image001045.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001043.jpg" title="Dusted & dialed-in on my cross setup. #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Dusted & dialed-in on my cross setup. #moots</small>
+                           </div>
+                           <img src="../lsphotos/image001043.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001042.jpg" title="Pre-school commuter train. #cat6" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,62 +263,6 @@
                               <small>#babyARC 🚲😮</small>
                            </div>
                            <img src="../lsphotos/image001026.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001027.jpg" title="😛#babySNUB" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>😛#babySNUB</small>
-                           </div>
-                           <img src="../lsphotos/image001027.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001025.jpg" title="This picture makes me so happy I had to post it again 😄#dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>This picture makes me so happy I had to post it again 😄#dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image001025.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001024.jpg" title="Morning miles . .
-
-#lovestarraceclub #sunrise #cycling #lovestar" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Morning miles . .
-
-#lovestarraceclub #sunrise #cycling #lovestar</small>
-                           </div>
-                           <img src="../lsphotos/image001024.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001023.jpg" title="Small peloton...big competition. #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Small peloton...big competition. #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image001023.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
