--- a/instagram51.html
+++ b/instagram51.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000421.jpg" title="So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles</small>
+                           </div>
+                           <img src="../lsphotos/image000421.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000422.jpg" title="Ride interrupted. #cx #cyclocross #cycling #bikechi #dprt #lovestarbicycles #lovestarbicyclebags #gravel #gravelriot #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ride interrupted. #cx #cyclocross #cycling #bikechi #dprt #lovestarbicycles #lovestarbicyclebags #gravel #gravelriot #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000422.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000423.jpg" title="Regram from @chateauduwaggoner of today's race at Dan Ryan Woods. Lovestar Factory Team game face at the start of the 4/5 race. #drwcx #cyclocross #cycling #cx #lovestarbicycles #lovestarbicyclebags #chicago #chicagocrosscup #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Regram from @chateauduwaggoner of today's race at Dan Ryan Woods. Lovestar Factory Team game face at the start of the 4/5 race. #drwcx #cyclocross #cycling #cx #lovestarbicycles #lovestarbicyclebags #chicago #chicagocrosscup #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000423.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000424.jpg" title="Stepped up my cat-6 game today. Long ride into work rockin the matching helmet and backpack... #cycling #bikecommute #cat6 #cyclocross #championsystem #stylesformiles #bikechi #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stepped up my cat-6 game today. Long ride into work rockin the matching helmet and backpack... #cycling #bikecommute #cat6 #cyclocross #championsystem #stylesformiles #bikechi #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000424.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000425.jpg" title="Barrier & run up practice all in one. #dprt #cyclocross #cx #lovestarbicycles #lovestarbicyclebags #cycling #bikechi #moots #psychloX" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring</small>
                            </div>
                            <img src="../lsphotos/image000440.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000441.jpg" title="Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad</small>
-                           </div>
-                           <img src="../lsphotos/image000441.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000442.jpg" title="Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag</small>
-                           </div>
-                           <img src="../lsphotos/image000442.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000443.jpg" title="Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000443.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000444.jpg" title="Today's ride was about trying to outrun the rain. Great group, tough ride, knobbies made me work a little extra today. Stupendous waffle for a well earned post ride reward. #lovestarbicyclebags #cycling #cyclocross #bikechi #moots #liegewaffle #delbescorner" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Today's ride was about trying to outrun the rain. Great group, tough ride, knobbies made me work a little extra today. Stupendous waffle for a well earned post ride reward. #lovestarbicyclebags #cycling #cyclocross #bikechi #moots #liegewaffle #delbescorner</small>
-                           </div>
-                           <img src="../lsphotos/image000444.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
