--- a/instagram6.html
+++ b/instagram6.html
@@ -6,6 +6,62 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001027.jpg" title="😛#babySNUB" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>😛#babySNUB</small>
+                           </div>
+                           <img src="../lsphotos/image001027.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001025.jpg" title="This picture makes me so happy I had to post it again 😄#dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>This picture makes me so happy I had to post it again 😄#dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image001025.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001024.jpg" title="Morning miles . .
+
+#lovestarraceclub #sunrise #cycling #lovestar" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Morning miles . .
+
+#lovestarraceclub #sunrise #cycling #lovestar</small>
+                           </div>
+                           <img src="../lsphotos/image001024.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001023.jpg" title="Small peloton...big competition. #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Small peloton...big competition. #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image001023.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001022.jpg" title="DPRT: a #lovestarraceclub / #unioncycling joint." rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>jim_ftw</h4>
@@ -211,58 +267,6 @@ Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybik
                               <small>This year for the three weeks of the tour, #lovestarraceclub riders were participating in a competition amongst ourselves to see who could ride the most miles, keep the highest average speed & gain the most elevation (Yellow, Green & PolkaDots) with custom seat bags and bragging rights on the line, competition was fierce...782  miles was the distance that claimed the Yellow SaddlePack. An Average speed of 19.5mph claimed the Green SaddlePack and 20,350 feet of climbing climbing claimed the polka dots! #cycling #tdf2017 #maillotjaune #clubride #bicycle #handmade #bicyclebag #lovestarbicyclebags #roadie #bikechi #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image001006.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001007.jpg" title="😮#lilshredder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>😮#lilshredder</small>
-                           </div>
-                           <img src="../lsphotos/image001007.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001005.jpg" title="Getting some dirt on the new bike this morning. #fatbike #fatcaad1 #ridecannondale #bikechi #bikecommute #gravel #gravelride #bicycle #cycling #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Getting some dirt on the new bike this morning. #fatbike #fatcaad1 #ridecannondale #bikechi #bikecommute #gravel #gravelride #bicycle #cycling #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image001005.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001004.jpg" title="New Bike Day 🚲😱 actually planning ahead this year. #winteriscoming" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New Bike Day 🚲😱 actually planning ahead this year. #winteriscoming</small>
-                           </div>
-                           <img src="../lsphotos/image001004.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001000.jpg" title="Pretty sure that my average ride to the park involves more equipment and packing than any of my overnight bicycle camping trips ever did. #adventuredad #dadlife #bicycle #fatbike #clearybikes #cycling #lilshredder #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pretty sure that my average ride to the park involves more equipment and packing than any of my overnight bicycle camping trips ever did. #adventuredad #dadlife #bicycle #fatbike #clearybikes #cycling #lilshredder #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image001000.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
