--- a/instagram8.html
+++ b/instagram8.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000986.jpg" title="Sunrise shred. Had to get out and get my new bike a little dirty. #cycling #bicycle #mountainbike #mtb #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise shred. Had to get out and get my new bike a little dirty. #cycling #bicycle #mountainbike #mtb #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000986.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000985.jpg" title="July." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>July.</small>
+                           </div>
+                           <img src="../lsphotos/image000985.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000983.jpg" title="#lovestarraceclub #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarraceclub #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000983.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000984.jpg" title="Stunner of a morning. #cycling #bicycle #bikechi #moots #lakemichigan #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stunner of a morning. #cycling #bicycle #bikechi #moots #lakemichigan #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000984.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000982.jpg" title="Got spit out the back of the Judson ride this morning...but got to meet up with my Dad for some father/son miles. #cycling #bicycle #bikechi #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>#goodbyeJudson #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000967.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000966.jpg" title="Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000966.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000965.jpg" title="Shred early, shred often. #cycling #bicycle #mtb #clearybikes #lilshredder #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Shred early, shred often. #cycling #bicycle #mtb #clearybikes #lilshredder #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000965.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000964.jpg" title="Learning from the master #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Learning from the master #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000964.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000961.jpg" title="Official results. #dk200 #dirtykanza #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Official results. #dk200 #dirtykanza #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000961.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
