--- a/instagram9.html
+++ b/instagram9.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000966.jpg" title="Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000966.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000965.jpg" title="Shred early, shred often. #cycling #bicycle #mtb #clearybikes #lilshredder #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Shred early, shred often. #cycling #bicycle #mtb #clearybikes #lilshredder #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000965.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000964.jpg" title="Learning from the master #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Learning from the master #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000964.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000961.jpg" title="Official results. #dk200 #dirtykanza #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Official results. #dk200 #dirtykanza #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000961.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000962.jpg" title="Early shred to welcome Gonzo home #lovestarraceclub #cycling #bicycle #bikechi #clubride #caferacer" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -225,58 +277,6 @@ First ride of the season where sunrise is officially before the ride start time.
                               <small>First ride of the season where sunrise is officially before the ride start time. #cycling #bicycle #championsystem #clubride #coffeeride #rideearlyrideoften #bikechi #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000948.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000946.jpg" title="Pink bottles and a pink saddlepack popping out on a raw titanium background to celebrate today's Giro stage. #lovestarbicyclebags #cycling #bicycle #moots #giroditalia #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pink bottles and a pink saddlepack popping out on a raw titanium background to celebrate today's Giro stage. #lovestarbicyclebags #cycling #bicycle #moots #giroditalia #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000946.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000943.jpg" title="Stealthy mounting on this amazing @spurcycle bell. Honestly, never thought there would be a bike bell that would look at home along side the beauty of @mootscycles welding and @chriskingbuzz components...but this knocks it out of the park. In stock now at the Pony Shop. #cycling #bicycle #adventurebike #spurcycle #moots #chrisking #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stealthy mounting on this amazing @spurcycle bell. Honestly, never thought there would be a bike bell that would look at home along side the beauty of @mootscycles welding and @chriskingbuzz components...but this knocks it out of the park. In stock now at the Pony Shop. #cycling #bicycle #adventurebike #spurcycle #moots #chrisking #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000943.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000944.jpg" title="Beautiful start to the day, and I almost beat the rain home. #cycling #bicycle #bikechi #lakemichigan #cyclocross #cx #cxiscoming #moots #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Beautiful start to the day, and I almost beat the rain home. #cycling #bicycle #bikechi #lakemichigan #cyclocross #cx #cxiscoming #moots #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000944.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000945.jpg" title="Hello old friend 🚲❤️#bicycle #cycling #adventurebike #moots #psychloX #cyclocross #cx #cxiscoming #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Hello old friend 🚲❤️#bicycle #cycling #adventurebike #moots #psychloX #cyclocross #cx #cxiscoming #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000945.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
